EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/09/2010==
Derision: Changed Client::GroupInvite2 to use the Invitee name passed in the OP_GroupInvite packet rather than the player's target.

==01/08/2010==
WildcardX: Fixed a bug that allowed a bot to be created with the same name as an existing player character. This would cause said bot to not zone with other bots the group.
WildcardX: Added new bot command, #bot mana. This will give a mana report for all spawned bots in the zone. Bot mana report spamming is now disabled.

==01/07/2010==
WildcardX: Fixed a EQEmuLoginServer crash that can happen as the result of a null reference in the database code.
WildcardX: Fixed a bug with bot archery. The command shouldn't crash the zone and the bot should correctly display the bow only.

==01/06/2010==
WildcardX: Fixed a bug that prevented Bot casters from casting if a mob becomes enraged.
WildcardX: Changed #bot list and #bot spawn commands to use bot name instead of the bot table id
WildcardX: Added new commands to save, load, delete and view bot groups. See the #bot botgroup help command to view them.
WildcardX: Fixed SQL syntax issues with database scripts for bots.
WildcardX: Fixed a bug that may have made it difficult to add bots to bot only groups.

<SQL Required for BOTS> 1077_botgroups.sql

==01/05/2010==
WildcardX: Fixed the EQEmuLoginServer project file, fixed a crash caused by referencing a NULL object and made a couple improvements to error handling.
Derision: Fix for quest::depopall related crash.
WildcardX: Improved healing for Bots inspired by contribtions from Bad_Captain! Bot healers won't let a HoT spell block them from casting a heal spell when in combat.
WildcardX: Bot pets will now seek to engage their target's from behind when their Bot master's are fighting the same mob from in front.

==12/30/2009==
Derision: Update azone2 with EQG v4 support.

==12/27/2009==