@@ -12,12 +12,12 @@ struct QGlobal
 	QGlobal(std::string g_name, uint32 c_id, uint32 n_id, uint32 z_id, std::string n_value, uint32 expire_date) 
 		: name(g_name), char_id(c_id), npc_id(n_id), zone_id(z_id), value(n_value), expdate(expire_date) { id = 0; }
 	std::string name;
-	std::string value;
-	uint32 id;
-	uint32 npc_id;
 	uint32 char_id;
+	uint32 npc_id;
 	uint32 zone_id;
+	std::string value;
 	uint32 expdate;
+	uint32 id;
 };
 
 class QGlobalCache
